--- a/src/views/f-a-q.css
+++ b/src/views/f-a-q.css
@@ -350,6 +350,9 @@
   font-stretch: normal;
   text-decoration: none;
 }
+.f-a-q-link {
+  display: contents;
+}
 .f-a-q-akariconslinkedinboxfill {
   width: 24px;
   height: 22px;
@@ -358,6 +361,10 @@
   box-sizing: border-box;
   object-fit: cover;
   border-color: transparent;
+  text-decoration: none;
+}
+.f-a-q-link1 {
+  display: contents;
 }
 .f-a-q-akariconsinstagramfill {
   width: 24px;
@@ -366,6 +373,7 @@
   box-sizing: border-box;
   object-fit: cover;
   border-color: transparent;
+  text-decoration: none;
 }
 .f-a-q-text19 {
   top: 23px;
