--- a/src/views/institution.css
+++ b/src/views/institution.css
@@ -176,6 +176,9 @@
   font-stretch: normal;
   text-decoration: none;
 }
+.institution-link {
+  display: contents;
+}
 .institution-akariconslinkedinboxfill {
   width: 24px;
   height: 22px;
@@ -184,6 +187,10 @@
   box-sizing: border-box;
   object-fit: cover;
   border-color: transparent;
+  text-decoration: none;
+}
+.institution-link1 {
+  display: contents;
 }
 .institution-akariconsinstagramfill {
   width: 24px;
@@ -192,6 +199,7 @@
   box-sizing: border-box;
   object-fit: cover;
   border-color: transparent;
+  text-decoration: none;
 }
 .institution-selectingteamcuate {
   top: 435px;
